# Selecting_Electric_Flight_Airports

./: README.md
CODE/: CMakeLists.txt
CODE/cmake/: FindGUROBI.cmake  FindSCIP.cmake  FindSOPLEX.cmake
CODE/src/: CMakeLists.txt  dump.h  global.cpp  global.h  global_parameter.h  main.cpp
CODE/src/seaport_program/: seaport_class.cpp  seaport_class.h
CODE/src/seaport_program/graph/: airport_graph.cpp  airport_graph.h  airport_graph_prop.h  data.h
CODE/src/seaport_program/scip_instance/constraint_handlers/: costoptimalpath_cons.cpp  costoptimalpath_cons.h
CODE/src/seaport_program/scip_instance/model/: constraints.cpp  constraints.h  model_init.cpp  model_init.h  pathvar_prob.cpp  pathvar_prob.h  scip_exception.h  variables.cpp  variables.h
CODE/src/seaport_program/scip_instance/pricer/: path_pricer.cpp  path_pricer.h  path_pricer_rc.cpp  path_pricer_rc.h
DATA/: electrification_costs.csv  electrification_costs_equal.csv  electrification_costs_szenario1.csv  electrification_costs_szenario2.csv  german_10_1_dataset_aircraft.csv  german_10_1_dataset_airports.csv  german_10_1_dataset_pairwise.csv  german_10_2_dataset_aircraft.csv  german_10_2_dataset_airports.csv  german_10_2_dataset_pairwise.csv  german_10_3_dataset_aircraft.csv  german_10_3_dataset_airports.csv  german_10_3_dataset_pairwise.csv  german_10_4_dataset_aircraft.csv  german_10_4_dataset_airports.csv  german_10_4_dataset_pairwise.csv  german_10_5_dataset_aircraft.csv  german_10_5_dataset_airports.csv  german_10_5_dataset_pairwise.csv  german_15_1_dataset_aircraft.csv  german_15_1_dataset_airports.csv  german_15_1_dataset_pairwise.csv  german_15_2_dataset_aircraft.csv  german_15_2_dataset_airports.csv  german_15_2_dataset_pairwise.csv  german_15_3_dataset_aircraft.csv  german_15_3_dataset_airports.csv  german_15_3_dataset_pairwise.csv  german_15_4_dataset_aircraft.csv  german_15_4_dataset_airports.csv  german_15_4_dataset_pairwise.csv  german_15_5_dataset_aircraft.csv  german_15_5_dataset_airports.csv  german_15_5_dataset_pairwise.csv  german_20_1_dataset_aircraft.csv  german_20_1_dataset_airports.csv  german_20_1_dataset_pairwise.csv  german_20_2_dataset_aircraft.csv  german_20_2_dataset_airports.csv  german_20_2_dataset_pairwise.csv  (+30 more)
